# TERM-5

./: LICENSE  README.md
Babak-Karasfi/Chess/: Chess.cpp  Chess.hpp  Makefile
Fardin-Shapoori/Lex/: scanner1.l  scanner2.l
Fardin-Shapoori/Scanner/: Scanner.cpp
Omid-Sojoodi/: Algorithms.hpp  CMakeLists.txt  main.cpp
Omid-Sojoodi/Algorithms/: Algorithms.cpp  Algorithms.hpp
Omid-Sojoodi/Algorithms/Graphics/: Graphics.cpp  Graphics.hpp
Omid-Sojoodi/Algorithms/Moving-on-Grid/: MovingOnGrid.cpp  MovingOnGrid.hpp
Omid-Sojoodi/Algorithms/Search/: Search.cpp  Search.hpp
Omid-Sojoodi/Algorithms/Search/Binary/: BinarySearch.cpp  BinarySearch.hpp
Omid-Sojoodi/Algorithms/Sorts/: Sorts.cpp  Sorts.hpp
Omid-Sojoodi/Algorithms/Sorts/Bubble/: Bubble.cpp  Bubble.hpp
Omid-Sojoodi/Algorithms/Sorts/Heap/: Heap.cpp  Heap.hpp
Omid-Sojoodi/Algorithms/Sorts/Insertion/: Insertion.cpp  Insertion.hpp
Omid-Sojoodi/Algorithms/Sorts/Merge/: Merge.cpp  Merge.hpp
Omid-Sojoodi/Algorithms/Sorts/Quick/: Quick.cpp  Quick.hpp
Omid-Sojoodi/Algorithms/Sorts/Radix/: Radix.cpp  Radix.hpp
Omid-Sojoodi/Algorithms/Sorts/Selection/: Selection.cpp  Selection.hpp
Omid-Sojoodi/Algorithms/TSP/: TSP.hpp
Reza-Abdollahi/: fullAdder.v  fullAdder_8bit.v  fullAdder_Modular.v  logicUnit.v  mux4to1.v  mux4to1_8bit.v  mux4to1_Modular.v  shiftRight.v  testBench.v
Reza-Abdollahi/Exercise-1/: mux2to1.v
Reza-Abdollahi/Multiplexers/: mux2to1.v  mux4to1.v  mux4to1_modular.v
comp/: lexer.l  main.cpp  parser.cpp  translation-table.cpp
